# LionKingGame

./: .gitignore  CMakeLists.txt  README.md  Tile.h  main.cpp  negative_events.txt  player.cpp  player.h
source/: Board.cpp  main.cpp  player.cpp  tile.cpp
source/include/: Board.h  Tile.h  player.h
source/txt/: positive_events.txt
